file manager: fix alignment of checkboxes and file names in detail list
BUG=chromium-os:16264
TEST=manual testing in chromeos-chrome on linux

Review URL: http://codereview.chromium.org/7046050

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@88395 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 70c8099bd6a3beb917a5e8f37a4da08d0fbb9e0c

--- a/chrome/browser/resources/file_manager/css/file_manager.css
+++ b/chrome/browser/resources/file_manager/css/file_manager.css
@@ -230,7 +230,7 @@ button.thumbnail-view > img {
 
 .file-checkbox {
   -webkit-margin-end: 0px;
-  margin-top: 5px;
+  margin-top: 6px;
   opacity: 0.1;
 }
 
